bug 831069 - upload thank you page
Also fixed bug 839234 - progress bar overflowing frame

Conflicts:

	flicks/base/static/css/main.css

--- a/flicks/base/static/css/home.css
+++ b/flicks/base/static/css/home.css
@@ -570,9 +570,3 @@
 
 }
 
-/* TODO: Temporary styling, please remove me. */
-.submit-frame {
-  width: 800px;
-  height: 700px;
-  background: white;
-}
